feat(IOS-55): add RoundService, update Roundcontroller, openapi.yaml
